	escape sequence as `TOKEN_DELIMITED_HORIZONTAL_MOTION`.
	(token::is_usable_as_delimiter): Reject
	`TOKEN_DELIMITED_HORIZONTAL_MOTION` instead of
	`TOKEN_HORIZONTAL_MOTION` as a delimiter.
	(token::next <z>, process_input_stack)
	(token::add_to_zero_width_node_list, token::process): Treat new
	token type the same as the old one.
	(token::description): Describe new token type distinctly.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/token.h (class token): Trivially refactor.
	Sort enumeration constants lexicographically by their symbol
	names.  It seems that they once were thus sorted (except for
	`TOKEN_EOF`), but my renaming activities have effaced that.
	Restore that ordering, but stop treating `TOKEN_EOF` specially.
	Its magnitude is never compared to anything (and shouldn't be).

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/pdf-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lj4-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lbp-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/safer-mode-works.sh: Fix newly added test
	to actually test what it means to test.  Continues commit
	49cbc926cf, 15 December.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/check-delimiter-validity.sh: Check
	unparameterized and invalid escape sequences for usability as
	escape sequence delimiters.  See Savannah #67375.

2025-12-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_title_parts): Throw deprecation