@@ -20,6 +20,10 @@
 	token type the same as the old one.
 	(token::description): Describe new token type distinctly.
 
+	* src/roff/groff/tests/check-delimiter-validity.sh: Delete check
+	for invalidity of `\0`, `\^`, and `\|` as delimiters--they're
+	valid again now.
+
 2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/token.h (class token): Trivially refactor.
